<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_apps_black_24dp"
        android:title="@string/dashboard" />
    <item
        android:id="@+id/navigation_login"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:title="@string/login" />

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_explore_black_24dp"
        android:title="@string/explore" />
    <item
        android:id="@+id/navigation_trending"
        android:icon="@drawable/ic_grade_black_24dp"
        android:title="@string/trending" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/profile" />
</menu>