<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.inpows.creativejava.fragments.DashboardFragment"
        android:label="@string/dashboard"
        tools:layout="@layout/fragment_dashboard" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.inpows.creativejava.fragments.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login" />
    <fragment
        android:id="@+id/explorerFragment"
        android:name="com.inpows.creativejava.fragments.ExplorerFragment"
        android:label="@string/explore"
        tools:layout="@layout/fragment_explorer" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.inpows.creativejava.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/trendingFragment"
        android:name="com.inpows.creativejava.fragments.TrendingFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_trending" />
</navigation>